# myCppTemplate

./: CMakeLists.txt  README.md
src/: SqliteCpp-test.cpp  json-test.cpp  main.cpp  main_rapidcpp.cpp  main_sqlitecpp.cpp  myDB_sqlite3-sqlite3pp.h  myDB_sqlite3-sqlitecpp.h  myDB_sqlite3.h  my_SqliteCpp.h  original-main.cpp  sqlite3pp-test.cpp
src/lib/: mySqlite3.cpp  mySqlite3.h
test/: CMakeLists.txt  myTest.cpp
